<resources>
    <string name="app_name">MoEvents</string>
    <string name="EventString">Event</string>
    <string name="DescriptionString">Description</string>
    <string name="OrganizationString">Organization</string>
    <string name="LocationString">Location</string>
    <string name="TimeString">All Day</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="TravelString">0.0</string>
</resources>
