<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    tools:context=".ItemDetailActivity" tools:ignore="MergeRootFrame"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_detail_container"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/EventString"
        android:textStyle="bold"
        android:id="@+id/EventText" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="500dp"
        android:text="@string/favorite"
        android:id="@+id/favBtn"
        />

    <ScrollView
        android:layout_height="100dp"
        android:layout_width="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DescriptionString"
            android:textStyle="italic"
            android:id="@+id/DescriptionText" />
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/LocationString"
        android:id="@+id/LocationText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/TimeString"
        android:id="@+id/TimeText" />
</LinearLayout>